Updates: Visual debugging with cortex-debug - Modified project name during build - Attempted USB fix - Moved grainuum's README to right directory

--- a/usb-firmware/make/Makefile
+++ b/usb-firmware/make/Makefile
@@ -1,6 +1,6 @@
 ##############################################################################
 BUILD = build
-BIN = Demo
+BIN = USB
 
 ##############################################################################
 .PHONY: all directory clean size
